added fonts and home starts

--- a/acaiteria-sjs/src/app/components/footer/footer.component.html
+++ b/acaiteria-sjs/src/app/components/footer/footer.component.html
@@ -1,2 +1,40 @@
-<footer [ngStyle]="{'height':  getAlturaDefaul()+'vh'}" class="footer" color="primary">
+<footer [ngStyle]="{'height':  getAlturaDefaul()+'vh'}">
+  <div class="container">
+    <div class="container-one">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam alias harum voluptatibus veritatis rerum
+      reprehenderit vitae quia labore consequuntur consequatur? Perferendis, similique aut rerum consequuntur nobis
+      repellat aspernatur libero rem!
+    </div>
+
+    <div class="container-two">
+      <h2>Pages</h2>
+      <ul>
+        <li> Home </li>
+        <li> Home </li>
+        <li> Home </li>
+        <li> Home </li>
+        <li> Home </li>
+      </ul>
+    </div>
+
+    <div class="container-tree">
+      <h2>Contact</h2>
+      <ul>
+        <li> email </li>
+        <li> telefone </li>
+      </ul>
+    </div>
+
+    <div class="container-four">
+      <h2>Social Networks</h2>
+      <ul>
+        <li> Facebook </li>
+        <li> Instagram </li>
+        <li> Watsapp </li>
+      </ul>
+    </div>
+  </div>
+  <div class="developed">
+    <h3>Deloped by Clodoaldo Neto</h3>
+  </div>
 </footer>
