--- a/acaiteria-sjs/src/app/components/layers/layer-principal/layer-principal.component.sass
+++ b/acaiteria-sjs/src/app/components/layers/layer-principal/layer-principal.component.sass
@@ -1,6 +1,6 @@
 .layout
   display: grid
-  //  grid-template-rows: 20vh 70vh 10vh
+  //  grid-template-rows:'10vh 5vh 100% 50vh'
   grid-template-areas:"localheader" "localnav" "localcontent" "localfooter"
 
 .layout .localheader
