--- a/acaiteria-sjs/src/app/pages/home/home.component.html
+++ b/acaiteria-sjs/src/app/pages/home/home.component.html
@@ -1,3 +1,20 @@
 <div class="home-conatainer">
-  
+  <section class="section-one">
+    <div class="imagem">
+      <img [src]="imagemAcai" alt="">
+    </div>
+    <div class="conteudo">
+      <h1>Qualquer coisa</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quod illum asperiores modi corporis qui sint
+        dolores,
+        velit unde alias atque dolor quia, dolore perspiciatis, quae nam! Nobis, nesciunt optio.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste ab quis eaque sequi officiis eligendi, et
+        nesciunt
+        ipsam officia iusto voluptatum quasi reprehenderit ea, modi deserunt laborum dignissimos culpa odit?</p>
+    </div>
+  </section>
+
+  <section class="section-two">
+    <!-- card de combos -->
+  </section>
 </div>
