--- a/acaiteria-sjs/src/app/components/footer/footer.component.sass
+++ b/acaiteria-sjs/src/app/components/footer/footer.component.sass
@@ -1,6 +1,75 @@
-.footer
+footer
   width: 100%
   background: #673AB7
   display: flex
+  flex-direction: column
+  justify-content: space-around
+  color: #fff
+  font-size: 1.4rem
+  text-align: center
+  font-family: 'Roboto Mono', monospace
+  h3
+     font-size: 1.4rem
+
+.container
+  display: flex
   flex-direction: row
+  justify-content: space-around
+  ul
+    padding: 0
+  li
+    list-style: none
+
+  .container-one
+    max-width: 29%
+    max-height: 40vh
+
+  .container-two
+    max-width: 23%
+    max-height: 40vh
+
+  .container-tree
+    max-width: 23%
+    max-height: 40vh
+
+  .container-four
+    max-width: 23%
+    max-height: 40vh
+
+.developed
+  align-self: center
+  text-align: center
+
+
+//media
+@media (max-width:425px)
+  footer
+    display: flex
+    flex-direction: column
+    justify-content: space-around
+    width: 100%
+    background: #673AB7
+    color: #fff
+    font-size: clamp(0.4rem, 0.5rem + 1vw, 1.4rem)
+    text-align: center
+    font-family: 'Roboto Mono', monospace
+    word-wrap: break-word
+    h3, h4, h5
+      font-size: clamp(0.5rem, 0.8rem + 1vw, 1.4rem)
+
+//media
+@media (max-width:768px)
+  footer
+    display: flex
+    flex-direction: column
+    justify-content: space-around
+    width: 100%
+    background: #673AB7
+    color: #fff
+    font-size: clamp(0.4rem, 0.5rem + 1vw, 1.4rem)
+    text-align: center
+    font-family: 'Roboto Mono', monospace
+    word-wrap: break-word
+    h3, h4, h5
+      font-size: clamp(0.5rem, 0.8rem + 1vw, 1.4rem)
 
