--- a/acaiteria-sjs/src/app/components/header/header.component.sass
+++ b/acaiteria-sjs/src/app/components/header/header.component.sass
@@ -22,7 +22,7 @@
     display: flex
     flex-direction: row
     flex-wrap: wrap
-
+    font-size: 0.8rem
   .example-spacer
     visibility: hidden
     flex: 1 1 auto
@@ -42,6 +42,7 @@
     display: flex
     flex-direction: row
     flex-wrap: wrap
+    font-size: 1.2rem
 
   .example-spacer
     visibility: hidden
@@ -54,3 +55,20 @@
 
   .item-menu
     visibility: visible
+
+@media (max-width:393px)
+  .toolbarHeader
+    position: fixed
+    display: flex
+    flex-direction: row
+    flex-wrap: wrap
+    font-size: 1.4rem
+
+  .example-spacer
+    visibility: hidden
+    flex: 1 1 auto
+
+  .item
+    max-width: 8px
+    padding: 10px
+
