--- a/acaiteria-sjs/src/app/pages/home/home.component.sass
+++ b/acaiteria-sjs/src/app/pages/home/home.component.sass
@@ -1,3 +1,40 @@
 .home-conatainer
   width: 100%
-  height: 100vh
+  height: 100%
+  display: flex
+  flex-direction: column
+
+  .section-one
+    width: 100%
+    height: 50%
+    display: flex
+    flex-direction: row
+    background: #f5f5f5
+    .imagem
+      display: flex
+      width: 50%
+      align-items: center
+      justify-content: center
+      img
+        background: #fff
+        max-width: 100%
+        height: auto
+        justify-self: center
+        border-radius: 4px 150px 0px 151px
+        -moz-border-radius: 4px 150px 0px 151px
+        -webkit-border-radius: 4px 150px 0px 151px
+        border: 0px solid #000000
+        box-shadow: inset 4px 5px 12px -1px rgba(0,0,0,0.1),inset 1px 1px 61px 2px rgba(0,0,0,0.2)
+    .conteudo
+      width: 50%
+      margin: 30px
+
+      h1
+        font-size: 4rem
+        font-family: 'Playball', cursive
+      p
+        font-size: 1.7rem
+        font-family: 'Roboto Condensed', sans-serif
+  .section-two
+
+
