--- a/acaiteria-sjs/src/styles.sass
+++ b/acaiteria-sjs/src/styles.sass
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+html
+  font-size: 62.5%
+body
+  box-sizing: border-box
+  font-size: 1.6rem
