--- a/acaiteria-sjs/src/app/pages/home/home.component.html
+++ b/acaiteria-sjs/src/app/pages/home/home.component.html
@@ -13,8 +13,21 @@
         ipsam officia iusto voluptatum quasi reprehenderit ea, modi deserunt laborum dignissimos culpa odit?</p>
     </div>
   </section>
-
   <section class="section-two">
+
     <!-- card de combos -->
+    <div class="info">
+      <h1>Nossos Combos</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sint alias praesentium tenetur hic velit aut,
+        quaerat atque eligendi magnam. Molestias rem praesentium cumque beatae alias? Commodi facere nemo ipsa!</p>
+    </div>
+
+    <div class="container-cards">
+      <app-card-riborn></app-card-riborn>
+      <app-card-riborn></app-card-riborn>
+      <app-card-riborn></app-card-riborn>
+    </div>
+
+
   </section>
 </div>
