--- a/acaiteria-sjs/src/app/pages/home/home.component.sass
+++ b/acaiteria-sjs/src/app/pages/home/home.component.sass
@@ -18,6 +18,7 @@
       img
         background: #fff
         max-width: 100%
+        width: auto
         height: auto
         justify-self: center
         border-radius: 4px 150px 0px 151px
@@ -25,6 +26,7 @@
         -webkit-border-radius: 4px 150px 0px 151px
         border: 0px solid #000000
         box-shadow: inset 4px 5px 12px -1px rgba(0,0,0,0.1),inset 1px 1px 61px 2px rgba(0,0,0,0.2)
+
     .conteudo
       width: 50%
       margin: 30px
@@ -35,6 +37,28 @@
       p
         font-size: 1.7rem
         font-family: 'Roboto Condensed', sans-serif
-  .section-two
 
+  .section-two
+    width: 100%
+    height: 50%
+    display: flex
+    flex-direction: column
+    .info
+      width: 100%
+      justify-content: center
+      text-align: center
+      padding: 20px
+      h1
+          font-size: 6rem
+          font-family: 'Playball', cursive
+
+    .container-cards
+      width: 100%
+      height: 100%
+      display: flex
+      flex-direction: row
+      flex-wrap: wrap
+      align-items: center
+      justify-content: space-around
+      padding: 40px
 
