--- a/acaiteria-sjs/src/app/components/header/header.component.sass
+++ b/acaiteria-sjs/src/app/components/header/header.component.sass
@@ -4,12 +4,13 @@
   flex-direction: row
   -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0)
   box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0)
+  z-index: 5
 
 .example-spacer
   flex: 1 1 auto
 
 .item
-  padding: 10px
+  padding: 25px
 
 .item-menu
   visibility: hidden
@@ -23,6 +24,7 @@
     flex-direction: row
     flex-wrap: wrap
     font-size: 0.8rem
+    z-index: 5
   .example-spacer
     visibility: hidden
     flex: 1 1 auto
@@ -43,6 +45,7 @@
     flex-direction: row
     flex-wrap: wrap
     font-size: 1.2rem
+    z-index: 5
 
   .example-spacer
     visibility: hidden
@@ -63,6 +66,7 @@
     flex-direction: row
     flex-wrap: wrap
     font-size: 1.4rem
+    z-index: 5
 
   .example-spacer
     visibility: hidden
