set fakeserver data

--- a/acaiteria-sjs/src/app/components/header/header.component.sass
+++ b/acaiteria-sjs/src/app/components/header/header.component.sass
@@ -13,7 +13,7 @@
   padding: 25px
 
 .item-menu
-  visibility: hidden
+  display: none
 
 
 // media query
@@ -26,13 +26,13 @@
     font-size: 0.8rem
     z-index: 5
   .example-spacer
-    visibility: hidden
+    display: none
     flex: 1 1 auto
 
   .item
     max-width: 8px
     padding: 10px
-    visibility: hidden
+    display: none
 
   .item-menu
     visibility: visible
@@ -48,13 +48,13 @@
     z-index: 5
 
   .example-spacer
-    visibility: hidden
+    display: none
     flex: 1 1 auto
 
   .item
     max-width: 8px
     padding: 10px
-    visibility: hidden
+     display: none
 
   .item-menu
     visibility: visible
@@ -69,7 +69,7 @@
     z-index: 5
 
   .example-spacer
-    visibility: hidden
+    display: none
     flex: 1 1 auto
 
   .item
