--- a/acaiteria-sjs/src/app/components/footer/footer.component.sass
+++ b/acaiteria-sjs/src/app/components/footer/footer.component.sass
@@ -1,14 +1,13 @@
 footer
-  width: 100%
-  font-size: 1.4rem
-  text-align: center
-  font-family: 'Roboto Mono', monospac
-  color: #fff
+  min-width: 100%
   background: #673AB7
   display: flex
   flex-direction: column
   justify-content: space-around
   padding: 20px
+  text-align: center
+  font-family: 'Roboto Mono', monospac
+  color: #fff
 
   h3
      font-size: 1.4rem
