--- a/acaiteria-sjs/src/app/pages/home/home.component.sass
+++ b/acaiteria-sjs/src/app/pages/home/home.component.sass
@@ -4,15 +4,22 @@
   display: flex
   flex-direction: column
 
+  h1
+    font-family: 'Playball', cursive
+    font-size: 5.5rem
+
+  p
+    font-family: 'Roboto Condensed', sans-serif
+
   .section-one
     width: 100%
-    height: 50%
     display: flex
     flex-direction: row
     background: #f5f5f5
     .imagem
       display: flex
       width: 50%
+      padding: 20px
       align-items: center
       justify-content: center
       img
@@ -29,28 +36,21 @@
 
     .conteudo
       width: 50%
-      margin: 30px
+      padding: 30px
 
-      h1
-        font-size: 4rem
-        font-family: 'Playball', cursive
       p
         font-size: 1.7rem
         font-family: 'Roboto Condensed', sans-serif
 
   .section-two
     width: 100%
-    height: 50%
     display: flex
     flex-direction: column
     .info
       width: 100%
       justify-content: center
       text-align: center
-      padding: 20px
-      h1
-          font-size: 6rem
-          font-family: 'Playball', cursive
+      padding: 30px
 
     .container-cards
       width: 100%
