--- a/acaiteria-sjs/src/styles.sass
+++ b/acaiteria-sjs/src/styles.sass
@@ -1,6 +1,11 @@
 html
   font-size: 62.5%
+
 body
-  font-size: 1.6rem
+  font-size: 1.7rem
+
 *
+  margin: 0
+  padding: 0
   box-sizing: border-box
+
