--- a/acaiteria-sjs/src/app/components/card-riborn/card-riborn.component.sass
+++ b/acaiteria-sjs/src/app/components/card-riborn/card-riborn.component.sass
@@ -46,7 +46,7 @@
   max-width: 280px
   min-width: 180px
   height: 50px
-  background: #673AB7
+  // background: #673AB7
   border-radius: 30px 50px 50px 30px
 
 /* conteudo da lateral esquerda (cima) do laço */
@@ -56,7 +56,7 @@
   min-width: 80px
   min-height: 50px
   left: -20px
-  background: #673AB7
+  // background: #673AB7
   border-radius: 30px
   border-bottom-left-radius:0
   z-index: 0
@@ -70,7 +70,7 @@
   height: 30px
   border-top-left-radius: 20px
   border-bottom-left-radius: 20px
-  background:#8045c6
+  // background:#673AB7
   z-index: 3
 .card .ribborn .ribbornSideMedium::after
   content: ''
@@ -79,7 +79,7 @@
   width: 15px
   height: 25px
   border-bottom-left-radius: 25px
-  background: #673AB7
+  background: inherit
   z-index: 2
 /* conteudo do header do laço */
 .card .ribborn .ribbornContent .header
@@ -97,7 +97,7 @@
   border-radius: 50%
 /*botão*/
 .card .buttonx button
-  background-color: #8045c6
+  background-color: inherit
   height: 30px
   border: none
   color:white
