added link to designer

--- a/acaiteria-sjs/src/app/components/layers/layer-principal/layer-principal.component.sass
+++ b/acaiteria-sjs/src/app/components/layers/layer-principal/layer-principal.component.sass
@@ -1,20 +1,21 @@
 .layout
+  width: 100%
   display: grid
   //  grid-template-rows:'10vh 5vh 100% 50vh'
   grid-template-areas: "localheader" "localnav" "localcontent" "localfooter"
 
 .layout .localheader
-  width: 100vw
+  width: 100%
   grid-area: localheader
 
 .layout .localnav
-  width: 100vw
+  width: 100%
   grid-area: localnav
 
 .layout .localcontent
-  width: 100vw
+  width: 100%
   grid-area: localcontent
 
 .layout .localfooter
-  width: 100vw
+  width: 100%
   grid-area: localfooter
