--- a/acaiteria-sjs/src/app/components/card-riborn/card-riborn.component.sass
+++ b/acaiteria-sjs/src/app/components/card-riborn/card-riborn.component.sass
@@ -46,7 +46,6 @@
   max-width: 280px
   min-width: 180px
   height: 50px
-  // background: #673AB7
   border-radius: 30px 50px 50px 30px
 
 /* conteudo da lateral esquerda (cima) do laço */
@@ -56,7 +55,6 @@
   min-width: 80px
   min-height: 50px
   left: -20px
-  // background: #673AB7
   border-radius: 30px
   border-bottom-left-radius:0
   z-index: 0
@@ -70,7 +68,8 @@
   height: 30px
   border-top-left-radius: 20px
   border-bottom-left-radius: 20px
-  // background:#673AB7
+  background: inherit
+  filter: contrast(400%)
   z-index: 3
 .card .ribborn .ribbornSideMedium::after
   content: ''
