--- a/acaiteria-sjs/src/app/pages/home/home.component.sass
+++ b/acaiteria-sjs/src/app/pages/home/home.component.sass
@@ -3,16 +3,9 @@
   height: 100%
   display: flex
   flex-direction: column
-
-  h1
-    font-family: 'Playball', cursive
-    font-size: 5.5rem
-
-  p
-    font-family: 'Roboto Condensed', sans-serif
-
   .section-one
     width: 100%
+    height: 50%
     display: flex
     flex-direction: row
     background: #f5f5f5
@@ -37,10 +30,14 @@
     .conteudo
       width: 50%
       padding: 30px
-
+      word-wrap: break-word
       p
         font-size: 1.7rem
         font-family: 'Roboto Condensed', sans-serif
+      h1
+        font-family: 'Playball', cursive
+        font-size: 5.5rem
+        // font-size: 1.5rem
 
   .section-two
     width: 100%
@@ -51,6 +48,12 @@
       justify-content: center
       text-align: center
       padding: 40px
+      h1
+        font-family: 'Playball', cursive
+        font-size: 5.5rem
+      p
+        font-size: 1.7rem
+        font-family: 'Roboto Condensed', sans-serif
 
     .container-cards
       width: 100%
@@ -62,3 +65,40 @@
       justify-content: space-around
       padding: 40px
 
+@media screen and (max-width: 320px)
+  .home-conatainer
+    width: 100%
+    height: 100%
+    display: flex
+    flex-direction: column
+  .section-one
+    width: 100%
+    display: flex
+    flex-direction: column
+    background: #f5f5f5
+    .imagem
+      display: flex
+      width: 70%
+      padding: 20px
+      align-items: center
+      justify-content: center
+      img
+        background: #fff
+        max-width: 90%
+        width: auto
+        height: auto
+        justify-self: center
+        border-radius: 4px 150px 0px 151px
+        -moz-border-radius: 4px 150px 0px 151px
+        -webkit-border-radius: 4px 150px 0px 151px
+        border: 0px solid #000000
+        box-shadow: inset 4px 5px 12px -1px rgba(0,0,0,0.1),inset 1px 1px 61px 2px rgba(0,0,0,0.2)
+    .conteudo
+      width: 100%
+      padding: 30px
+      p
+        font-size: 1.7rem
+        font-family: 'Roboto Condensed', sans-serif
+      h1
+        font-family: 'Playball', cursive
+        font-size: 2rem
