--- a/acaiteria-sjs/src/app/components/header/header.component.html
+++ b/acaiteria-sjs/src/app/components/header/header.component.html
@@ -2,8 +2,21 @@
   <mat-icon class="item item-menu">menu</mat-icon>
   <span class="item">{{logoDefault}}</span> <!-- [ngStyle]="{'font-family': 'Sansita Swashed, cursive'}" -->
   <span class="example-spacer"></span>
-  <mat-icon class="item">home</mat-icon>
-  <mat-icon class="item">favorite</mat-icon>
-  <mat-icon class="item">shop cart</mat-icon>
-  <mat-icon class="item">login</mat-icon>
+
+  <a [routerLink]="['/']">
+    <mat-icon class="item">home</mat-icon>
+  </a>
+
+  <a routerLink="">
+    <mat-icon class="item">favorite</mat-icon>
+  </a>
+
+  <a routerLink="">
+    <mat-icon class="item">shop cart</mat-icon>
+  </a>
+
+  <a routerLink="/home-logado">
+    <mat-icon class="item">login</mat-icon>
+  </a>
+
 </mat-toolbar>
