--- a/acaiteria-sjs/src/app/components/layers/layer-principal/layer-principal.component.sass
+++ b/acaiteria-sjs/src/app/components/layers/layer-principal/layer-principal.component.sass
@@ -1,5 +1,5 @@
 .layout
-  width: 100%
+  width: 100vw
   display: grid
   //  grid-template-rows:'10vh 5vh 100% 50vh'
   grid-template-areas: "localheader" "localnav" "localcontent" "localfooter"
