--- a/acaiteria-sjs/src/app/components/navbar/navbar.component.sass
+++ b/acaiteria-sjs/src/app/components/navbar/navbar.component.sass
@@ -1,6 +1,28 @@
 nav
   width: 100%
   height: 100%
+  box-sizing: border-box
   background: #673AB7
   display: flex
-  flex-direction: row
+  flex-direction: row-reverse
+  align-items: center
+  padding: 30px
+  .router-link-active
+    color: black
+
+  a
+    align-items: center
+    color: #FFFFFF
+    font-weight: bold
+    font-size: 1.4rem
+    font-family: 'Playball', cursive
+
+  a:hover
+     color: black
+
+  div
+    padding: 20px
+
+
+
+
