--- a/acaiteria-sjs/src/app/components/navbar/navbar.component.sass
+++ b/acaiteria-sjs/src/app/components/navbar/navbar.component.sass
@@ -6,16 +6,16 @@ nav
   display: flex
   flex-direction: row-reverse
   align-items: center
-  padding: 30px
+
   .router-link-active
     color: black
 
   a
     align-items: center
     color: #FFFFFF
-    font-weight: bold
     font-size: 1.4rem
-    font-family: 'Playball', cursive
+    font-family: 'Roboto Slab', serif
+    text-decoration: none
 
   a:hover
      color: black
@@ -23,6 +23,10 @@ nav
   div
     padding: 20px
 
-
-
-
+@media screen and (max-width: 320px)
+  nav
+    width: 100%
+    height: 100%
+    box-sizing: border-box
+    background: #673AB7
+    display: none
