--- a/acaiteria-sjs/src/app/pages/home-logado/home-logado.component.sass
+++ b/acaiteria-sjs/src/app/pages/home-logado/home-logado.component.sass
@@ -1,4 +1,30 @@
 .container-logado
   width: 100%
   height: 100%
-  background: blue
+  background: #fff
+  display: flex
+  flex-direction: row
+
+  .lateral-esquerda
+    width: 20%
+    background: #f5f5f5
+    display: flex
+    flex-direction: column
+    text-align: center
+    div
+      margin: 30px 10%
+      padding: 7%
+      background: rgba(0, 0, 0, 0.2)
+    div:hover
+      color: #fff
+      margin: 30px 10%
+      padding: 7%
+      background:#673AB7
+
+  .lateral-direita
+    width: 80%
+    margin: 5%
+    display: flex
+    flex-direction: row
+    flex-wrap: wrap
+    justify-content: space-around
