--- a/acaiteria-sjs/src/app/pages/home-logado/home-logado.component.sass
+++ b/acaiteria-sjs/src/app/pages/home-logado/home-logado.component.sass
@@ -28,3 +28,7 @@
     flex-direction: row
     flex-wrap: wrap
     justify-content: space-around
+  a
+    text-decoration: none
+  a:hover
+    background: rgba(0, 0, 0, 0.4)
