added media query on home page

--- a/acaiteria-sjs/src/app/components/header/header.component.html
+++ b/acaiteria-sjs/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar [ngStyle]="{'height': alturaDefault+'vh'}" class="toolbarHeader" color="primary">
+<mat-toolbar class="toolbarHeader" [ngStyle]="{'height': alturaDefault+'vh'}" color="primary">
   <mat-icon class="item item-menu">menu</mat-icon>
-  <span class="item">{{logoDefault}}</span> <!-- [ngStyle]="{'font-family': 'Sansita Swashed, cursive'}" -->
+  <span class="item">{{logoDefault}}</span>
   <span class="example-spacer"></span>
 
   <a [routerLink]="['/']">
