--- a/acaiteria-sjs/src/app/components/layers/layer-principal/layer-principal.component.html
+++ b/acaiteria-sjs/src/app/components/layers/layer-principal/layer-principal.component.html
@@ -1,4 +1,4 @@
-<div class="layout" [ngStyle]="{'grid-template-rows': '10vh 5vh 100% 50vh'}">
+<div class="layout" [ngStyle]="{'grid-template-rows': '10vh 5vh 280vh 50vh'}">
 
   <div class="localheader">
     <ng-content select="app-header"></ng-content>
