--- a/acaiteria-sjs/src/app/pages/home-comprando/home-comprando.component.html
+++ b/acaiteria-sjs/src/app/pages/home-comprando/home-comprando.component.html
@@ -1,10 +1,14 @@
 <div class="container-comprador">
-  <div *ngFor="let item of listcardsProducts" class="cards" >
-    <app-card-riborn [cor]="'#8045c6'" [title]="item.name" [content]="item.name" [profile]="item.profile">
-    </app-card-riborn>
+
+  <div class="cards">
+    <div *ngFor="let item of listcardsProducts">
+      <app-card-riborn [cor]="'#8045c6'" [title]="item.name" [content]="item.name" [profile]="item.profile">
+      </app-card-riborn>
+    </div>
   </div>
+
   <div class="side-car">
-    
+
   </div>
 
 </div>
