--- a/acaiteria-sjs/src/app/pages/new-product/new-product.component.html
+++ b/acaiteria-sjs/src/app/pages/new-product/new-product.component.html
@@ -1,5 +1,5 @@
 <div class="container-form">
-  <h1>cadastrar novo produto</h1>
+  <h1>Cadastrar novo Produto</h1>
   <form #form="ngForm">
     <label for="nome">Nome:
       <input name="nome" type="text" [(ngModel)]="nome">
