--- a/acaiteria-sjs/src/app/components/card-riborn/card-riborn.component.html
+++ b/acaiteria-sjs/src/app/components/card-riborn/card-riborn.component.html
@@ -1,24 +1,26 @@
-<div class="card">
+<div class="card-container" [ngStyle]="{width: cardContWidth, height: cardContHeight}">
+  <div class="card" [ngStyle]="{width: corpoCardWidth, height: corpoCardHeight}">
+    <div class="cardicon"></div>
 
-  <div class="cardicon"></div>
-  <div class="ribborn">
-    <div class="ribbornContent" [ngStyle]="{background: cor}">
-      <div class="header">
-        <h2>{{title|lowercase}}</h2>
+    <div class="ribborn">
+      <div class="ribbornContent" [ngStyle]="{background: cor}">
+        <div class="header">
+          <h2>{{title|lowercase}}</h2>
+        </div>
+        <div class="ribbornSideMedium" [ngStyle]="{background: cor}"></div>
       </div>
-      <div class="ribbornSideMedium" [ngStyle]="{background: cor}"></div>
     </div>
-  </div>
 
-  <div class="profile">
-    <img [src]="profile" alt="">
-  </div>
+    <div class="profile">
+      <img [src]="profile" alt="">
+    </div>
 
-  <div class="body">
-    {{content}}
-  </div>
+    <div class="body">
+      {{content}}
+    </div>
 
-  <div class="buttonx">
-    <button [ngStyle]="{background: cor}">learn more</button>
+    <div class="buttonx">
+      <button [ngStyle]="{background: cor}">learn more</button>
+    </div>
   </div>
 </div>
