--- a/acaiteria-sjs/src/app/components/card-riborn/card-riborn.component.sass
+++ b/acaiteria-sjs/src/app/components/card-riborn/card-riborn.component.sass
@@ -1,14 +1,18 @@
+.card-container
+  display: flex
+  flex-direction: row
+  align-content: center
+  justify-content: center
 .card
   display: grid
   position:relative
-  width: 200px
-  height:262px
   border-radius: 15px
   background: #fff
   box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15)
   grid-template-rows: 10px 50px 90px 80px 32px
   grid-template-areas: "cardicon" "ribborn" "profile" "body" "buttonx"
-  margin: 5px
+  margin-top: 20px
+
 .card .cardicon
   grid-area: cardicon
   min-height: 100%
