--- a/acaiteria-sjs/src/app/components/footer/footer.component.sass
+++ b/acaiteria-sjs/src/app/components/footer/footer.component.sass
@@ -1,5 +1,5 @@
 footer
-  min-width: 100%
+  width: 100%
   background: #673AB7
   display: flex
   flex-direction: column
@@ -42,36 +42,122 @@ footer
     text-align: center
 
 
-//media 425
-@media (max-width:425px)
+//media 320
+@media only screen and (max-width:320px)
   footer
+    width: 100%
     display: flex
     flex-direction: column
     justify-content: space-around
+    background: #673AB7
+    color: #fff
+    font-size: 0.4rem
+    font-family: 'Roboto Mono', monospace
+    word-wrap: break-word
+    h1,h2,h3, h4, h5
+      font-size: 1.0rem
+    .container
+      width: 90%
+      display: flex
+      flex-direction: colum
+      ul
+        padding: 0
+      li
+        list-style: none
+
+      .container-one
+        min-width: 100%
+        min-height: 20%
+
+      .container-two
+        display: none
+
+      .container-tree
+        min-width: 100%
+        min-height: 20%
+
+      .container-four
+        min-width: 100%
+        max-height: 20%
+
+
+
+
+//media 425
+@media only screen and (max-width:420px)
+  footer
     width: 100%
+    display: flex
+    flex-direction: column
+    justify-content: space-around
     background: #673AB7
     color: #fff
     font-size: clamp(0.4rem, 0.5rem + 1vw, 1.4rem)
-    text-align: center
     font-family: 'Roboto Mono', monospace
     word-wrap: break-word
-
     h3, h4, h5
       font-size: clamp(0.5rem, 0.8rem + 1vw, 1.4rem)
+    .container
+      width: 90%
+      display: flex
+      flex-direction: colum
+      ul
+        padding: 0
+      li
+        list-style: none
+
+      .container-one
+        min-width: 100%
+        min-height: 20%
+
+      .container-two
+        display: none
+
+      .container-tree
+        min-width: 100%
+        min-height: 20%
+
+      .container-four
+        min-width: 100%
+        max-height: 20%
+
 
 //media 768
-@media (max-width:768px)
+@media only screen and (max-width:768px)
   footer
+    width: 100%
     display: flex
     flex-direction: column
     justify-content: space-around
-    width: 100%
     background: #673AB7
     color: #fff
-    font-size: clamp(0.4rem, 0.5rem + 1vw, 1.4rem)
-    text-align: center
+    font-size: 1.4rem
     font-family: 'Roboto Mono', monospace
     word-wrap: break-word
     h3, h4, h5
       font-size: clamp(0.5rem, 0.8rem + 1vw, 1.4rem)
+    .container
+      width: 90%
+      display: flex
+      flex-direction: colum
+      ul
+        padding: 0
+      li
+        list-style: none
+
+      .container-one
+        min-width: 100%
+        min-height: 20%
+
+      .container-two
+        display: none
+
+      .container-tree
+        min-width: 100%
+        min-height: 20%
+
+      .container-four
+        min-width: 100%
+        max-height: 20%
+
 
