--- a/acaiteria-sjs/src/app/components/layers/layer-principal/layer-principal.component.sass
+++ b/acaiteria-sjs/src/app/components/layers/layer-principal/layer-principal.component.sass
@@ -1,5 +1,6 @@
 .layout
   width: 100vw
+  height: 100%
   display: grid
   //  grid-template-rows:'10vh 5vh 100% 50vh'
   grid-template-areas: "localheader" "localnav" "localcontent" "localfooter"
@@ -15,6 +16,7 @@
 .layout .localcontent
   width: 100%
   grid-area: localcontent
+  // box-sizing: content-box
 
 .layout .localfooter
   width: 100%
