--- a/acaiteria-sjs/src/app/pages/home-comprando/home-comprando.component.sass
+++ b/acaiteria-sjs/src/app/pages/home-comprando/home-comprando.component.sass
@@ -1,17 +1,21 @@
 .container-comprador
   width: 100%
   height: 100%
-  // background: red
   display: flex
   flex-direction: row
+
   .cards
-    width: 39%
+    width: 70%
+    height: inherit
     display: flex
     flex-direction: row
     flex-wrap: wrap
-    justify-content: space-around
+    // background: red
+    justify-content: center
+    align-items: flex-start
+
   .side-car
-    width: 60%
+    width: 30%
     background: rgba(0,0,0,0.3)
     display: flex
     flex-direction: column
