--- a/acaiteria-sjs/src/app/pages/home/home.component.sass
+++ b/acaiteria-sjs/src/app/pages/home/home.component.sass
@@ -5,7 +5,7 @@
   flex-direction: column
   .section-one
     width: 100%
-    height: 50%
+    height: 100vh
     display: flex
     flex-direction: row
     background: #f5f5f5
@@ -39,6 +39,7 @@
 
   .section-two
     width: 100%
+    height: 100vh
     display: flex
     flex-direction: column
     .info
@@ -55,7 +56,7 @@
 
     .container-cards
       width: 100%
-      height: 100%
+      height: 70%
       display: flex
       flex-direction: row
       flex-wrap: wrap
@@ -64,21 +65,21 @@
       padding: 40px
 
 
-@media screen and (max-width: 320px)
+@media only screen and (max-width: 320px)
   .home-conatainer
     width: 100%
-    max-height: 70%
+    height: 100%
     display: flex
     flex-direction: column
     .section-one
       width: 100%
+      height: 90vh
       display: flex
       flex-direction: column
       background: #f5f5f5
       .imagem
         display: flex
-        width: 90%
-        padding: 10px
+        width: 100%
         align-items: center
         justify-content: center
         img
@@ -98,8 +99,31 @@
         padding: 0 auto
         margin: inherit
         p
-          font-size: 1.7rem
+          font-size: 1.2rem
           font-family: 'Roboto Condensed', sans-serif
         h1
           font-family: 'Playball', cursive
-          font-size: 4.5rem
+          font-size: 3rem
+
+    .section-two
+      width: 100%
+      height: 190vh
+      display: flex
+      flex-direction: column
+      .info
+        width: 100%
+        height: 20%
+        justify-content: center
+        text-align: center
+        h1
+          font-family: 'Playball', cursive
+          font-size: 3rem
+        p
+          font-size: 1.2rem
+          font-family: 'Roboto Condensed', sans-serif
+
+      .container-cards
+        width: 100%
+        height: 70%
+        float: bottom
+        margin: 10px
