--- a/acaiteria-sjs/src/app/pages/new-product/new-product.component.sass
+++ b/acaiteria-sjs/src/app/pages/new-product/new-product.component.sass
@@ -5,15 +5,17 @@
   flex-direction: column
   align-items: center
   justify-content: center
-  background: red
-  button
-    width: 100px
-    height: 30px
-  input
-    background: blue
+  form
     width: 70%
+    padding: 20px
+    margin: 20px
+  input
+    width: 100%
     height: 40px
     border-color: rgba(0, 0, 0, 0.2)
     border-radius: 30px
 
+  button
+    width: 100px
+    height: 30px
 
